# interview-manager-server

./: .gitignore  Dockerfile.production  README.md  docker-compose.development.yaml  docker-compose.production.yaml  docker-compose.yaml  eslint.config.mjs  nest-cli.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/assistant/: Readme.md  tsconfig.json
apps/server/: tsconfig.json
libs/embedding/: tsconfig.json
libs/embedding-database/: tsconfig.json
prisma/: schema.prisma
src/: app.module.ts  main.ts
src/attachment/: attachment.module.ts  attachment.service.ts  attachment.types.ts
src/authentication/: authentication.controller.ts  authentication.module.ts  authentication.service.ts  session.service.ts
src/configuration/: app.configuration.ts  database.configuration.ts  embedding.configuration.ts  jwt.configuration.ts  rabbit-mq.configuration.ts  socket.configuration.ts
src/embedding/: embedding.module.ts  embedding.service.ts
src/file-uploader/: file-uploader.constants.ts  file-uploader.module.ts  file-uploader.utility.ts
src/interview/: interview.controller.ts  interview.module.ts  interview.service.ts
src/media/: media.module.ts
src/organization/: organization.controller.ts  (+2 more)
workers/: embedding.py  helpers.py  pyproject.toml  run_workers.sh  transcription.py
workers/core/: base_worker.py
workers/core/embedding/: chroma_service.py  embedding_model.py  embedding_service.py  embedding_worker.py
workers/core/transcription/: transcription_model.py  transcription_service.py  transcription_worker.py
workers/settings/: config.py
(+264 files in other folders)
