[project]
name = "workers"
version = "0.1.0"
description = "Audio transcription worker service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pika>=1.3.2",
    "pyannote-audio>=3.3.2",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "sentence-transformers>=2.5.1",
    "chromadb>=0.4.22",
]

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "F", "I", "N", "W", "B", "UP", "PL", "RUF"]
ignore = []

[tool.ruff.isort]
known-first-party = ["workers"]
